# MCP-Multi-Agent-Deep-Researcher

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  LICENSE  Makefile  QUICKSTART.md  README.md  frontend.html  github-setup.sh  launcher.py  mcp.config.json  pyproject.toml  requirements.txt  setup.py  simple_test.py  start.sh  verify_installation.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Multi-Agent-deep-researcher-mcp-windows-linux/: __init__.py  http_server.py  server.py  test_research.py
Multi-Agent-deep-researcher-mcp-windows-linux/agents/: research_crew.py
Multi-Agent-deep-researcher-mcp-windows-linux/agents/tools/: linkup_search.py  ollama_tool.py
